--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -78,6 +78,10 @@
 
                <input type="submit" id="submit" class="submit" value="Submit">
             </form>
+
+            <footer>
+               <p>Created by <a href="https://twitter.com/SandipanIO">Sandipan Mukherjee</a></p>
+            </footer>
          </div>
       </main>
    </body>
