--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -20,10 +20,11 @@
    <!-- Hero Section -->
    <div class="hero">
       <div class="hero__banner">
-         <h1>Dr. A.P.J. Abdul Kalam</h1>
-         <p>The People's President & the Missile Man of India</p>
+         <h1 id="title" class="heading-1">Dr. APJ Abdul Kalam</h1>
+         <p>People&apos;s President & the Missile Man of India</p>
       </div>
    </div>
+
    <!-- Main Navigation -->
    <nav class="main-nav">
       <div class="container">
@@ -44,83 +45,96 @@
       </div>
    </nav>
 
-   <!-- Life Section -->
-   <div id="life" class="life">
-      <div class="container">
-         <h2 class="heading-2">Life of Dr. APJ Abdul Kalam</h2>
-         <div class="life__wrapper">
-            <div>
-               <img class="image-box life__image" src="images/kalam-sir.jpg" alt="Dr. A. P. J. Abdul Kalam">
-            </div>
-            <div class="life__details">
-               <p>
-                  Avul Pakir Jainulabdeen Abdul Kalam (15October 1931 &dash; 27 July 2015) 
-                  was an Indian aerospace scientist, who served as the 11th President of India 
-                  from 2002 to 2007. He was born and raised in Rameswaram, Tamil Nadu (India) 
-                  and studied physics and aerospace engineering.<br><br>
-
-                  He spent the next four decades as a scientist and science administrator, 
-                  mainly at the Defence Research and Development Organisation (DRDO) and 
-                  Indian Space Research Organisation (ISRO) and was intimately involved in 
-                  India's civilian space programme and military missile development efforts. 
-                  He thus came to be known as the Missile Man of India for his work 
-                  on the development of ballistic missile and launch vehicle technology.<br><br>
-                  
-                  Widely referred to as the People's President, he returned to his civilian life 
-                  of education, writing and public service after a single term. He was a recipient 
-                  of several prestigious awards, including the Bharat Ratna, the highest civilian 
-                  award of India. Read more about Dr. A.P.J. Abdul Kalam on 
-                  <a class="link" href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a>.
-               </p>
+   <!-- Main -->
+   <main id="main">
+      <!-- Life Section -->
+      <div id="life" class="life">
+         <div class="container">
+            <h2 class="heading-2">Life of Dr. Kalam</h2>
+            <div class="life__wrapper">
+               <figure id="img-div" class="life__image-block">
+                  <img id="image" class="life__image | box" src="images/kalam-sir.jpg" alt="Dr. A. P. J. Abdul Kalam">
+                  <figcaption id="img-caption" class="life__image-caption">Dr. APJ Abdul Kalam</figcaption>
+               </figure>
+               <div id="tribute-info" class="life__details">
+                  <p class="life__paragraph">
+                     Avul Pakir Jainulabdeen Abdul Kalam (15October 1931 &dash; 27 July 2015) 
+                     was an Indian aerospace scientist, who served as the 11th President of India 
+                     from 2002 to 2007.
+                  </p>
+                  <p class="life__paragraph">
+                     He was born and raised in Rameswaram, Tamil Nadu (India) 
+                     and studied physics and aerospace engineering.
+                  </p>
+                  <p class="life__paragraph">
+                     He spent the next four decades as a scientist and science administrator, 
+                     mainly at the Defence Research and Development Organisation (DRDO) and 
+                     Indian Space Research Organisation (ISRO) and was intimately involved in 
+                     India's civilian space programme and military missile development efforts. 
+                  </p>
+                  <p class="life__paragraph">
+                     He thus came to be known as the Missile Man of India for his work 
+                     on the development of ballistic missile and launch vehicle technology.
+                  </p>
+                  <p class="life__paragraph">
+                     Widely referred to as the People's President, he returned to his civilian life 
+                     of education, writing and public service after a single term. 
+                  </p>
+                  <p class="life__paragraph">
+                     He was a recipient of several prestigious awards, including the Bharat Ratna, 
+                     the highest civilian award of India. Read more about Dr. A.P.J. Abdul Kalam on 
+                     <a id="tribute-link" class="link" href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">Wikipedia</a>.
+                  </p>
+               </div>
             </div>
          </div>
       </div>
-   </div>
 
-   <!-- Books -->
-   <div id="books" class="books">
-      <div class="container">
-         <h2 class="heading-2">Books Written by Dr. Kalam</h2>
-         <ul class="books__list" role="list">
-            <li role="listitem">
-               <a href="https://www.amazon.in/Ignited-Minds-Unleashing-power-within/dp/0143424122" target="_blank">
-                  <img class="image-box books__image" src="images/book1.jpg" alt="Ignited Minds - Unleashing the power within India ">
-               </a>
-            </li>
-            <li role="listitem">
-               <a href="https://www.amazon.in/Beyond-2020-P-J-Abdul-Kalam/dp/0143426060/" target="_blank">
-                  <img class="image-box books__image" src="images/book2.jpeg" alt="Beyond 2020: A Vision For Tomorrow’s India">
-               </a>
-            </li>
-            <li role="listitem">
-               <a href="https://www.amazon.in/Born-Blossom-P-J-Abdul-Kalam/dp/8184303505/" target="_blank">
-                  <img class="image-box books__image" src="images/book3.jpg" alt="You Are Born to Blossom">
-               </a>
-            </li>
-            <li role="listitem">
-               <a href="https://penguin.co.in/book/failure-is-a-teacher/" target="_blank">
-                  <img class="image-box books__image" src="images/book4.jpg" alt="Failure is a teacher">
-               </a>
-            </li>
-         </ul>
+      <!-- Books -->
+      <div id="books" class="books">
+         <div class="container">
+            <h2 class="heading-2">Books Written by Dr. Kalam</h2>
+            <ul class="books__list" role="list">
+               <li class="books__item | box" role="listitem">
+                  <a href="https://www.amazon.in/Ignited-Minds-Unleashing-power-within/dp/0143424122" target="_blank">
+                     <img class="books__image" src="images/book1.jpg" alt="Ignited Minds - Unleashing the power within India ">
+                  </a>
+               </li>
+               <li class="books__item | box" role="listitem">
+                  <a href="https://www.amazon.in/Beyond-2020-P-J-Abdul-Kalam/dp/0143426060/" target="_blank">
+                     <img class="books__image" src="images/book2.jpeg" alt="Beyond 2020: A Vision For Tomorrow’s India">
+                  </a>
+               </li>
+               <li class="books__item | box" role="listitem">
+                  <a href="https://www.amazon.in/Born-Blossom-P-J-Abdul-Kalam/dp/8184303505/" target="_blank">
+                     <img class="books__image" src="images/book3.jpg" alt="You Are Born to Blossom">
+                  </a>
+               </li>
+               <li class="books__item | box" role="listitem">
+                  <a href="https://penguin.co.in/book/failure-is-a-teacher/" target="_blank">
+                     <img class="books__image" src="images/book4.jpg" alt="Failure is a teacher">
+                  </a>
+               </li>
+            </ul>
+         </div>
       </div>
-   </div>
 
-   <!-- Quotes -->
-   <div id="quotes" class="quotes">
-      <h2 class="heading-2">Inspiring Quotes</h2>
-      <div class="container">
-         <blockquote class="quotes__item">
-            Don&apos;t take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.
-         </blockquote> 
-         <blockquote class="quotes__item">
-            If you fail, never give up because FAIL means First Attempt In Learning.
-         </blockquote>
-         <blockquote class="quotes__item">
-            Be active! Take on responsibility! Work for the things you believe in. If you do not, you are surrendering your fate to others.
-         </blockquote>
+      <!-- Quotes -->
+      <div id="quotes" class="quotes">
+         <h2 class="heading-2">Inspiring Quotes</h2>
+         <div class="container">
+            <blockquote class="quotes__item">
+               Don&apos;t take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.
+            </blockquote> 
+            <blockquote class="quotes__item">
+               If you fail, never give up because FAIL means First Attempt In Learning.
+            </blockquote>
+            <blockquote class="quotes__item">
+               Be active! Take on responsibility! Work for the things you believe in. If you do not, you are surrendering your fate to others.
+            </blockquote>
+         </div>
       </div>
-   </div>
+   </main>
 
    <!-- Footer -->
    <footer class="footer">
