--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -59,7 +59,7 @@
             <button class="btn btn__cta">Shop Now</button>
          </div>
          <div class="hero__video">
-            <video width="100%" controls muted autoplay loop>
+            <video width="100%" controls muted autoplay loop playsinline poster="assets/video-poster.png">
                <source src="assets/video.mp4" type="video/mp4">
                Your browser does not support the video tag.
                </video>
